erDiagram
    roles            ||--o{ users                 : "роль"
    return_statuses  ||--o{ return_requests        : "status"
    users            ||--o{ return_requests        : "manager_id"
    clients          ||--o{ return_requests        : "client_id"
    return_reasons   ||--o{ return_requests        : "reason_id"
    warehouses       ||--o{ return_requests        : "warehouse_id"
    return_requests  ||--o{ return_items           : "позиции"
    return_requests  ||--o{ documents              : "документы"
    return_requests  ||--o{ notifications          : "уведомления"
    return_requests  ||--o{ action_history         : "история"
    return_requests  ||--o| supplier_examinations  : "претензия"
    suppliers        ||--o{ supplier_examinations  : "supplier_id"
    return_items     ||--o| warehouse_checks       : "приёмка"
    users            ||--o{ warehouse_checks       : "inspector_id"
    users            ||--o{ action_history         : "user_id"
    users            ||--o{ notifications          : "recipient_user_id"

    roles {
        serial id PK
        varchar name
        varchar description
    }
    users {
        serial id PK
        varchar email
        varchar hashed_password
        varchar last_name
        varchar first_name
        varchar patronymic
        varchar phone
        int role_id FK
        bool is_active
        timestamp created_at
    }
    clients {
        serial id PK
        varchar name
        varchar phone
        varchar email
        varchar address
        varchar comment
        timestamp created_at
    }
    suppliers {
        serial id PK
        varchar name
        varchar contact_person
        varchar phone
        varchar email
        varchar address
        varchar comment
        bool is_active
    }
    warehouses {
        serial id PK
        varchar name
        varchar address
        bool is_active
    }
    return_reasons {
        serial id PK
        varchar name
        varchar description
        bool is_active
    }
    return_statuses {
        serial id PK
        varchar name
        varchar code
        varchar description
        int sort_order
    }
    return_requests {
        serial id PK
        varchar number
        int client_id FK
        varchar return_type
        varchar kind
        int reason_id FK
        varchar status
        int manager_id FK
        int warehouse_id FK
        text comment
        numeric total_amount
        varchar outcome
        bool onec_synced
        varchar onec_document_number
        timestamp created_at
        timestamp updated_at
    }
    return_items {
        serial id PK
        int return_request_id FK
        varchar product_name
        varchar article
        int quantity
        varchar unit
        numeric price
    }
    warehouse_checks {
        serial id PK
        int return_item_id FK
        int quantity_fact
        varchar packaging_condition
        text defect_description
        text photos
        int inspector_id FK
        timestamp checked_at
    }
    supplier_examinations {
        serial id PK
        int return_request_id FK
        int supplier_id FK
        timestamp transfer_date
        timestamp result_date
        varchar conclusion
        text details
        timestamp created_at
    }
    documents {
        serial id PK
        int return_request_id FK
        varchar document_type
        varchar file_name
        varchar file_path
        varchar generated_by
        timestamp created_at
    }
    action_history {
        serial id PK
        int return_request_id FK
        int user_id FK
        varchar action
        varchar old_status
        varchar new_status
        text details
        timestamp created_at
    }
    notifications {
        serial id PK
        int return_request_id FK
        varchar recipient_type
        varchar recipient_contact
        int recipient_user_id FK
        varchar recipient_role
        varchar channel
        text message
        bool is_sent
        timestamp sent_at
        timestamp created_at
    }
